updated HTML & CSS. Added footer and corrected white space at the bottom of the page. Added borders to social media icons.

--- a/style.css
+++ b/style.css
@@ -1,19 +1,23 @@
 html {
-  /* height: auto; */
+  height: auto;
   padding: 0;
   margin: 0;
   overflow-x: hidden;
 }
+body {
+  margin: 0;
+  padding: 0;
+}
 .general-container {
   display: grid;
   grid-template-rows:
-    auto
+    60px
     800px
     450px
     580px
     1000px
-    600px
-    120px;
+    400px
+    80px;
   grid-template-columns: none;
   grid-template-areas:
     "nav"
@@ -24,7 +28,6 @@ html {
     "main5"
     "footer";
   margin: 0;
-  font-family: "Castoro", serif;
 }
 nav {
   grid-area: nav;
@@ -36,7 +39,8 @@ nav {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  max-height: 50px;
+  justify-items: center;
+  height: 60px;
 }
 a {
   padding: 10px;
@@ -56,6 +60,7 @@ a {
   align-items: center;
   margin-right: 100px;
   justify-content: space-evenly;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .list-buttons {
@@ -269,40 +274,44 @@ h2 {
 .more-details-button2 {
   background-color: green;
   padding: 10px 15px;
-  border-radius: 2px;
+  border-radius: 5px;
   border: none;
 }
 .more-details-button3 {
   background-color: green;
   padding: 10px 15px;
-  border-radius: 2px;
+  border-radius: 5px;
   border: none;
+  margin-top: 50px;
 }
 .main5 {
   grid-area: main5;
   background-image: url(./BACKGROUND\ IMAGE\ Image.jpg);
   background-repeat: no-repeat;
   width: 100%;
-  background-size: 110%;
+  background-size: cover;
   background-position: center center;
-  margin: 0;
+  /* margin: 0;
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
   flex-direction: column;
   align-items: center;
-  color: green;
+  color: green; */
 }
 .book {
   color: green;
+  text-align: center;
 }
 .booking-p {
   color: white;
+  text-align: center;
 }
 .book-now-button2 {
   background-color: green;
   color: white;
   padding: 10px 20px;
+  border: none;
 }
 .reservation-containers {
   display: flex;
@@ -317,12 +326,18 @@ h2 {
 footer {
   grid-area: footer;
   background-color: black;
+  margin: 0;
+  padding: 0;
 }
 .main-footer-container {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  background-color: black;
+  align-content: flex-end;
+  position: relative;
+  bottom: 0;
 }
 .foody-footer {
   color: green;
@@ -336,12 +351,14 @@ footer {
   margin-right: 65px;
 }
 .social-media-container {
-  margin-right: 50px;
+  align-content: center;
 }
 .follow-us-text {
   color: green;
 }
-
+.fa {
+  border: white solid 1px;
+}
 @media only screen and (max-width: 768px) {
   .general-container {
     display: grid;
